The final Version of the project with all adjustement and updates

--- a/Gestion_Centre_Formations/Views/Certificate/ViewCertificate.cshtml
+++ b/Gestion_Centre_Formations/Views/Certificate/ViewCertificate.cshtml
@@ -89,7 +89,7 @@
                             </div>
                             <div class="col-xs-4 pm-certified col-xs-4 text-center">
                                 <span class="pm-empty-space block underline"></span>
-                                <span class="bold block">Certificate ID : @Model.CertificateID</span>
+                                <span class="bold block">Certificate ID : @ViewBag.HashId</span>
                             </div>
                         </div>
                     </div>
