--- a/Gestion_Centre_Formations/Views/Formations/Index.cshtml
+++ b/Gestion_Centre_Formations/Views/Formations/Index.cshtml
@@ -58,6 +58,13 @@
         </div>
     </form>
 </div>
+<!-- AI Assistnce button -->
+
+<div class="col-12 text-center">
+    <a href="@Url.Action("Index", "AssistanceAI")" class="btn btn-outline-primary px-4 mt-4">
+        <i class="bi bi-robot me-2"></i>Assistance IA
+    </a>
+</div>
 
 <!-- Courses Section -->
 <section class="section courses" id="courses">
@@ -77,36 +84,33 @@
         <div class="row event_box">
             @foreach (var course in Model.Where(f => f.Supp == false))
             {
-            <div class="col-lg-4 col-md-6 wow event_outer fadeInUp @course.Categorie.ToLower()" data-wow-delay="0.1s">
-                <div class="course-item bg-light hover-lift">
-                    <div class="position-relative overflow-hidden">
-                        @{
-                            var imageName = course.Titre.Replace(" ", "-").ToLower();
-                        }
-                        <a href="#"><img class="img-fluid" src="~/assets/images/course/@(imageName).jpg" alt="@course.Titre"></a>
-                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                            <a href="@Url.Action("Join", "Formations", new { courseId = course.FormationID })"
-                               class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                               style="border-radius: 30px;">Join Now</a>
+                <div class="col-lg-4 col-md-6 wow event_outer fadeInUp @course.Categorie.ToLower()" data-wow-delay="0.1s">
+                    <div class="course-item bg-light hover-lift">
+                        <div class="position-relative overflow-hidden">
+                            <a href="#"><img class="img-fluid" src="~/assets/images/course/@(course.Titre).jpg" alt="@course.Titre"></a>
+                            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+                                <a href="@Url.Action("Join", "Formations", new { courseId = course.FormationID })"
+                                   class="flex-shrink-0 btn btn-sm btn-primary px-3"
+                                   style="border-radius: 30px;">Join Now</a>
+                            </div>
+                        </div>
+                        <div class="text-center p-4 pb-0">
+                            <h3 class="mb-0">$@course.Prix</h3>
+                            <h5 class="mb-4">@course.Titre</h5>
+                        </div>
+                        <div class="d-flex border-top">
+                            <small class="flex-fill text-center border-end py-2">
+                                <i class="fa fa-user-tie text-primary me-2"></i>@course.Formateur.Nom @course.Formateur.Prenom
+                            </small>
+                            <small class="flex-fill text-center border-end py-2">
+                                <i class="fa fa-clock text-primary me-2"></i>@course.Duration Hrs
+                            </small>
+                            <small class="flex-fill text-center py-2">
+                                <i class="fa fa-user text-primary me-2"></i>@course.FormationParticipants.Count() Students
+                            </small>
                         </div>
                     </div>
-                    <div class="text-center p-4 pb-0">
-                        <h3 class="mb-0">$@course.Prix</h3>
-                        <h5 class="mb-4">@course.Titre</h5>
-                    </div>
-                    <div class="d-flex border-top">
-                        <small class="flex-fill text-center border-end py-2">
-                            <i class="fa fa-user-tie text-primary me-2"></i>@course.Formateur.Nom @course.Formateur.Prenom
-                        </small>
-                        <small class="flex-fill text-center border-end py-2">
-                            <i class="fa fa-clock text-primary me-2"></i>@course.Duration Hrs
-                        </small>
-                        <small class="flex-fill text-center py-2">
-                            <i class="fa fa-user text-primary me-2"></i>@course.FormationParticipants Students
-                        </small>
-                    </div>
                 </div>
-            </div>
             }
         </div>
     </div>
