--- a/Gestion_Centre_Formations/Views/Shared/_Layout.cshtml
+++ b/Gestion_Centre_Formations/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                         }
                         else if (Session["UserType"].ToString() == "Participant")
                         {
-                            <a href="@Url.Action("Index", "ParticipantProfile")" class="nav-item nav-link">Profile</a>
+                            <a href="@Url.Action("Index", "Profile")" class="nav-item nav-link">Profile</a>
                         }
                         else if (Session["UserType"].ToString() == "Admin")
                         {
@@ -102,11 +102,20 @@
                                 </div>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0" aria-labelledby="userDropdown">
-                                <li>
-                                    <a href="@Url.Action("Profile", "User")" class="dropdown-item">
-                                        <i class="bi bi-person me-2"></i>Certifications
-                                    </a>
-                                </li>
+                                @if (Session["UserType"].ToString() == "Participant")
+                                {
+                                    <li>
+                                        <a href="@Url.Action("Index", "ParticipantProfile")" class="dropdown-item">
+                                            <i class="bi bi-book me-2"></i>My Learning
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("Certifications", "Certificate")" class="dropdown-item">
+                                            <i class="bi bi-person me-2"></i>Certifications
+                                        </a>
+                                    </li>
+                                }
+
                                 <li>
                                     <a class="dropdown-item" href="@Url.Action("Logout", "Authentification")">
                                         <i class="bi bi-box-arrow-right me-2"></i>Logout
